--- a/force-app/main/default/lwc/goalDataTable/goalDataTable.html
+++ b/force-app/main/default/lwc/goalDataTable/goalDataTable.html
@@ -5,7 +5,7 @@
 				<thead>
 					<tr style="color:lightcoral">
 						<th class="slds-border_right tableheading" scope="col" style="width: 5%;">
-							<div class="slds-truncate" title="Goal Name">KRA Name</div>
+							<div class="slds-truncate" title="KRA Name">KRA Name</div>
 						</th>
 						<th class="slds-border_right tableheading" scope="col" style="width: 15%;">
 							<div class="slds-truncate" title="Project Name">Project Name</div>
@@ -14,7 +14,7 @@
 							<div class="slds-truncate" title="Resource Name">Resource Name</div>
 						</th>
 						<th class="slds-border_right tableheading" scope="col" style="width: 15%;">
-							<div class="slds-truncate" title="Requested From">Requested By</div>
+							<div class="slds-truncate" title="Requested By">Requested By</div>
 						</th>
 						<th class="slds-border_right tableheading" scope="col" style="width: 5% !important;">
 							<div class="slds-truncate" title="Project Onboarding Date">Project Onboarding Date</div>
