--- a/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
+++ b/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
@@ -471,10 +471,10 @@
                                 <thead>
                                     <tr class="slds-line-height_reset">
                                         <th class="" scope="col">
-                                            <div class="slds-truncate" title="Rating Score">Section Name</div>
+                                            <div class="slds-truncate" title="Section Name">Section Name</div>
                                         </th>
                                         <th class="" scope="col">
-                                            <div class="slds-truncate" title="Description">Average Rating</div>
+                                            <div class="slds-truncate" title="Average Rating">Average Rating</div>
                                         </th>
                                     </tr>
                                 </thead>
