--- a/force-app/main/default/lwc/performancemgntmain/performancemgntmain.html
+++ b/force-app/main/default/lwc/performancemgntmain/performancemgntmain.html
@@ -11,7 +11,7 @@
 		<lightning-tab label="Rewards and Recognition" value="three">
 			<c-rewards-and-recog> </c-rewards-and-recog>
 		</lightning-tab>
-		<lightning-tab label="Pending Feedback Request" value="five">
+		<lightning-tab label="Pending Feedback Requests" value="five">
 			<c-goal-data-table></c-goal-data-table>
 		</lightning-tab>
 		<lightning-tab label="Company KRA's" value="four">
