--- a/force-app/main/default/lwc/pmkrafullview/pmkrafullview.html
+++ b/force-app/main/default/lwc/pmkrafullview/pmkrafullview.html
@@ -415,8 +415,8 @@
 					<lightning-button variant="brand" label="Complete KRA" onclick={handleCompleteKRA}
 						class="slds-var-m-left_x-small"></lightning-button>
 				</template>
-				<lightning-button variant="" label="Close" onclick={handleCloseFullView}
-					class="slds-var-m-left_x-small"></lightning-button>
+				<!--lightning-button variant="" label="Close" onclick={handleCloseFullView}
+					class="slds-var-m-left_x-small"></lightning-button-->
 			</footer>
 		</template>
 
