--- a/force-app/main/default/lwc/generatePerformanceKRA/generatePerformanceKRA.html
+++ b/force-app/main/default/lwc/generatePerformanceKRA/generatePerformanceKRA.html
@@ -237,8 +237,13 @@
 
 							<div class="leftBox">
 								<lightning-input label="HR Rating" type="Number" name="HR_Rating__c"
-									value= {averageOverallRating} onchange={dataHandler}>
+									value= {averageOverallRating} onchange={dataHandler} step="any">
 								</lightning-input>
+								<template if:true={errorMessage}>
+									<div class="slds-text-color_error slds-m-top_small">
+										{errorMessage}
+									</div>
+								</template>
 							</div>
 
 							<div class="midBox">
