--- a/force-app/main/default/lwc/goalDataTable/goalDataTable.html
+++ b/force-app/main/default/lwc/goalDataTable/goalDataTable.html
@@ -110,18 +110,18 @@
 												aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
 												<div class="slds-modal__container">													
 													<header class="slds-modal__header">
-														<button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse" title="Close" onclick={hideKRAEditModalBox}>
+													<button class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse" title="Close" onclick={hideKRAEditModalBox}>
 									                <lightning-icon icon-name="utility:close"
 									                   alternative-text="close"
 									                   variant="inverse"
 									                   size="small" ></lightning-icon>
 									                <span class="slds-assistive-text">Close</span>
-									             </button>
+									            	 </button>
 														<h2 id="modal-heading-02" class="slds-text-heading_medium slds-hyphenate">Quarterly KRA Edit</h2>
 													</header>																					
 													<div class="slds-modal__content slds-p-around_medium" id="modal-content-id-2">
-														<!-- onclose={hideKRAEditModalBox} -->														
-														<c-quarterlykraedit mode={mode} selected-project-id ={selectedProjectId} receivedkraid={selectedKraQuaterly} selectedresource={selectedResourceId} tab={tab} onmycustomevent={handleCustomEvent}> </c-quarterlykraedit>
+																											
+														<c-quarterlykraedit mode={mode} selected-project-id ={selectedProjectId} receivedkraid={selectedKraQuaterly} selectedresource={selectedResourceId} tab={tab} onmycustomevent={handleCustomEvent} onclose ={hideKRAEditModalBox}> </c-quarterlykraedit>
 													</div>																					
 													<footer class="slds-modal__footer">									
 														<button class="slds-button slds-button_neutral" title="Close" onclick={hideKRAEditModalBox}>Close</button>
