Disabled the Combobox , if the goal status is not 'In Progress'.

--- a/force-app/main/default/lwc/projectAssignmentTable/projectAssignmentTable.html
+++ b/force-app/main/default/lwc/projectAssignmentTable/projectAssignmentTable.html
@@ -55,8 +55,8 @@
 								<td style=";word-wrap:break-word; width: 15%;padding-bottom:24px;" class="overflowModal">
 
 									<lightning-combobox class="overflowModal" placeholder="-Please Select-"
-										value={mentee.value} data-projectid={mentee.projectid} 
-										data-projectassigmentid={mentee.projectAssigmentId}
+										value={mentee.value} data-projectid={mentee.projectid} disabled ={mentee.disableCombobox} 
+										data-projectassigmentid={mentee.projectAssigmentId} 
 										onchange={handleChangeCombobox} options={mentee.managerOptions}>
 									</lightning-combobox>
                                
