--- a/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
+++ b/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
@@ -603,7 +603,7 @@
                         </lightning-layout-item>
                 
                         <lightning-layout-item padding="around-small" size="3">
-                            <lightning-button variant="success" label="Submit" onclick={handleSaveSubmitActionDuplicateOverAll}
+                            <lightning-button variant="brand" label="Submit" onclick={handleSaveSubmitActionDuplicateOverAll}
                                 disabled={isSubmitBtnDisabled} class={showSaveSubmitButtonsVisibility}></lightning-button>
                         </lightning-layout-item>
                 
