Deploying these components for PM_Def_135 / PM_Def_138

--- a/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
+++ b/force-app/main/default/lwc/quarterlykraedit/quarterlykraedit.html
@@ -474,7 +474,7 @@
                                             <div class="slds-truncate" title="Section Name">Section Name</div>
                                         </th>
                                         <th class="" scope="col">
-                                            <div class="slds-truncate" title="Average Rating">Average Rating</div>
+                                            <div class="slds-truncate" title="Average Rating">Average Rating (Weightage)</div>
                                         </th>
                                     </tr>
                                 </thead>
@@ -524,11 +524,11 @@
                                         <tr class="slds-hint-parent">
                                             <th data-label="5" scope="row">
                                                 <div class="slds-truncate" title="Overall Rating">
-                                                    <a href="javascript:void(0)">Overall Rating</a>
+                                                    <b><a href="javascript:void(0)">Overall Rating</a></b>
                                                 </div>
                                             </th>
                                             <td data-label="Overall Average Rating">
-                                                <div class="slds-truncate">{wrapData.AreaWiseAvgRating}</div>
+                                                <div class="slds-truncate"><b>{wrapData.AreaWiseAvgRating}</b></div>
                                             </td>
                                         </tr>
                                     </tbody>
@@ -579,11 +579,11 @@
                                         <tr class="slds-hint-parent">
                                             <th data-label="5" scope="row">
                                                 <div class="slds-truncate" title="Overall Rating">
-                                                    <a href="javascript:void(0)">Overall Rating</a>
+                                                    <b><a href="javascript:void(0)">Overall Rating</a></b>
                                                 </div>
                                             </th>
                                             <td data-label="Overall Average Rating">
-                                                <div class="slds-truncate">{wrapData.AreaWiseAvgRating}</div>
+                                                <div class="slds-truncate"><b>{wrapData.AreaWiseAvgRating}</b></div>
                                             </td>
                                         </tr>
                                     </tbody>
