--- a/force-app/main/default/lwc/projectAssignmentTable/projectAssignmentTable.html
+++ b/force-app/main/default/lwc/projectAssignmentTable/projectAssignmentTable.html
@@ -7,6 +7,13 @@
 				</template>
 			</div>
 		<div class="tableFixHead">
+			<p style="font-size: 1.0em;">
+				Note: The "Request to" dropdown will auto update by removing the options each time an option has been selected to
+				send the request to. However, you can still track the KRA feedback requests sent, by clicking on the action button
+				available in the Mentee's KRA record
+			</p><br>
+
+
 			<table class="slds-table_cell-buffer slds-no-row-hover slds-table_bordered fixed_header">
 				<thead>
 					<tr  style="color:lightcoral ">
@@ -17,10 +24,10 @@
 							<div class="" title="Resource Name">Resource Name</div>
 						</th>
 						<th class="slds-border_right tableheading" style="width: 15%;" scope="col">
-							<div class="slds-truncate" title="Project Onboarding Date">Project Onboarding Date</div>
+							<div class="slds-truncate" title="Assignment Start Date">Assignment Start Date</div>
 						</th>
 						<th class="slds-border_right tableheading" style="width: 15%;" scope="col">
-							<div class="slds-truncate" title="Project Offboarding Date">Project Offboarding Date</div>
+							<div class="slds-truncate" title="Assignment End Date">Assignment End Date</div>
 						</th>
 						<th class="slds-border_right tableheading" style="width: 15%;" scope="col">
 							<div class="slds-truncate" title="Request To">Request To</div>
